--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>YaMe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="./assets/index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js">
 </head>
 <body>
     <header>
@@ -76,7 +77,7 @@
                                 <i class="fa-solid fa-user"></i>
                             </a>
                         </li>
-                        <li>
+                        <li  class="position">
                             <a href="">
                                 <i class="fa-solid fa-bag-shopping"></i>
                             </a>
@@ -87,8 +88,95 @@
                     </ul>
                 </div>
         </div>
+        <div class="header-mb">
+            <div class="header-mb-menu">
+                <div class="header-mb-menu-ic">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                </div>
+                <div class="header-mb-logo">
+                    <img src="https://res.yame.vn/Content/images/yame-f-logo-white.png" alt="">
+                </div>
+                <div class="header-mb-search">
+                    <ul class="search__main">
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-solid fa-user"></i>
+                            </a>
+                        </li>
+                        <li  class="position">
+                            <a href="">
+                                <i class="fa-solid fa-bag-shopping"></i>
+                            </a>
+                            <a href="" class="shopping">
+                                0
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!--  -->
+                <div class="header-mb-menu-submenu">
+                    <div class="submenu-click">
+                        <span><i class="fa-solid fa-x"></i></span>
+                    </div>
+                    <ul class=" sub-menu">
+                        <li>
+                            <a href="">
+                                Bộ Sưu Tầm
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                            <ul>
+                                <li>
+                                    <a href="">bộ sưu tầm</a>
+                                </li>
+                                <li>
+                                    <a href="">bộ sưu tầm</a>
+                                </li>
+                                <li>
+                                    <a href="">bộ sưu tầm</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">
+                                Gu Tối Giản
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                Gu Đơn Giản
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                            <ul>
+                                <li>
+                                    <a href="">Áo Thun</a>
+                                </li>
+                                <li>
+                                    <a href="">Quần Shot</a>
+                                </li>
+                                <li>
+                                    <a href="">Quần Dài</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="">
+                                Gu Thiết Kế
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <!--  -->
+            </div>
+        </div>
     </header>
-    <main>
+    <main class="d-none">
 
         <!-- start banner -->
         <section>
