--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             </div>
         </div>
     </header>
-    <main class="d-none">
+    <main>
 
         <!-- start banner -->
         <section>
