--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                             </a>
                             <ul>
                                 <li>
-                                    <a href="">bộ sưu tầm</a>
+                                    <a href="">Quần</a>
                                 </li>
                                 <li>
-                                    <a href="">bộ sưu tầm</a>
+                                    <a href="">Áo</a>
                                 </li>
                                 <li>
-                                    <a href="">bộ sưu tầm</a>
+                                    <a href="">Giày</a>
                                 </li>
                             </ul>
                         </li>
